--- a/app/src/main/res/layout/activity_full_throttle.xml
+++ b/app/src/main/res/layout/activity_full_throttle.xml
@@ -34,7 +34,7 @@
             android:id="@+id/finalacttitile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Codex 2.0"
+            android:text="Full Throttle"
             android:textSize="30sp"
             android:textAlignment="center"
             android:typeface="serif"
@@ -45,10 +45,27 @@
             android:padding="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Love doing programming? Love solving interesting and challenging problems? Do you want Topcoder goodies? So fasten your seat belts because you should not miss out on this Topcoder contest. Topcoder Contest is an intra-college coding competition. The platform used for the event will be Topcoder. It will be open for all and no registration fee is required; all you need is a topcoder account."
+            android:text="Design a robot either wired or wireless within the specified dimensions that can operated manually and can travel through all turns of the track. The robot that will complete the specified task in least time will be the winner"
             android:textSize="20sp"
             android:textColor="@color/white"
             />
+        <TextView
+            android:padding="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Design a robot either wired or wireless within the specified dimensions that can operated manually and can travel through all turns of the track. The robot that will complete the specified task in least time will be the winner"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:padding="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The ROBOT which will start on the START point and reach the FINISH point block by various laps and hurdles in the shortest time will be nominated the winner."
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+
 
         <TextView
             android:id="@+id/rules"
@@ -66,7 +83,7 @@
             android:paddingRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1. Please refrain from discussing strategy during the contest."
+            android:text="1. Every team will have 2 trial runs. After the trials are over, the fastest time achieved during those trials will be chosen for the team."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
@@ -75,7 +92,7 @@
             android:paddingRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2. Any case of code plagiarism will result in disqualification of both the users from the contest. We've a fairly good plagiarism detector that works at the opcode level."
+            android:text="2. One trial should not last more than two minutes. After the trial time is over, the TIME-UP BUZZER will sound and the team will be asked to remove the robot from the COMPETITION FIELD."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
@@ -85,7 +102,7 @@
             android:paddingRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3. You will code directly on Topcoder applet or Web Arena."
+            android:text="3. If the robot is on the field half way and operating during the TIME-UP BUZZER sound, the team will be given 2 more minutes so the robot operation is not interrupted."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
@@ -96,7 +113,16 @@
             android:paddingBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4. Languages supported: C++, Python, Java, C#."
+            android:text="4. Team with the least time taken wins."
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5. Dragging or carrying of bot from wire is not allowed."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
@@ -122,7 +148,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Puru Raj Jain"
+                android:text="Prachi Agarwal"
                 android:layout_weight="5"
                 android:textSize="20sp"
                 android:textColor="@color/white"
@@ -135,44 +161,12 @@
                 android:layout_weight="5"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:text="+91-9414268529"
+                android:text="+91-8586061195"
                 android:id="@+id/con1"
                 android:clickable="true"
                 />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:paddingBottom="25dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:text="Sanjay Singh"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/con2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:clickable="true"
-                android:text="+91-9929959939"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
 
         <Button
             android:id="@+id/register"
