--- a/app/src/main/res/layout/activity_mindspark.xml
+++ b/app/src/main/res/layout/activity_mindspark.xml
@@ -34,7 +34,7 @@
             android:id="@+id/finalacttitile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Codex 2.0"
+            android:text="MindSpark"
             android:textSize="30sp"
             android:textAlignment="center"
             android:typeface="serif"
@@ -45,10 +45,57 @@
             android:padding="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Love doing programming? Love solving interesting and challenging problems? Do you want Topcoder goodies? So fasten your seat belts because you should not miss out on this Topcoder contest. Topcoder Contest is an intra-college coding competition. The platform used for the event will be Topcoder. It will be open for all and no registration fee is required; all you need is a topcoder account."
+            android:text="This is a swift quizzing event conducted by ‘BITPAC’ and is open for all streams which will test your written, verbal and visual abilities immensely."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Rounds"
+            android:textSize="25sp"
+            android:padding="10dp"
+            android:typeface="serif"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1. Elimination Round"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2. Rapid Fire:questions to be answered within 20 seconds"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3. Visual Round: Image recognition"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+        <TextView
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4. Buzzer Round: perceptive QA"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            />
+
+
 
         <TextView
             android:id="@+id/rules"
@@ -66,37 +113,7 @@
             android:paddingRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1. Please refrain from discussing strategy during the contest."
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2. Any case of code plagiarism will result in disqualification of both the users from the contest. We've a fairly good plagiarism detector that works at the opcode level."
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            />
-
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3. You will code directly on Topcoder applet or Web Arena."
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            />
-
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingBottom="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4. Languages supported: C++, Python, Java, C#."
+            android:text="Participants-Team of two. The circuit should be constructed correctly.All the teams should complete the task within the time frame."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
@@ -122,7 +139,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Puru Raj Jain"
+                android:text="Tripti Katara"
                 android:layout_weight="5"
                 android:textSize="20sp"
                 android:textColor="@color/white"
@@ -135,7 +152,7 @@
                 android:layout_weight="5"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:text="+91-9414268529"
+                android:text="+91-9587898233"
                 android:id="@+id/con1"
                 android:clickable="true"
                 />
@@ -155,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="Sanjay Singh"
+                android:text="Shashwat Bharadwaj"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -166,7 +183,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:clickable="true"
-                android:text="+91-9929959939"
+                android:text="+91-8769444506"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
