--- a/app/src/main/res/layout/activity_vibhor_gandhi.xml
+++ b/app/src/main/res/layout/activity_vibhor_gandhi.xml
@@ -34,7 +34,7 @@
             android:id="@+id/finalacttitile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Codex 2.0"
+            android:text="Vibhor Gandhi Memorial"
             android:textSize="30sp"
             android:textAlignment="center"
             android:typeface="serif"
@@ -45,61 +45,28 @@
             android:padding="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Love doing programming? Love solving interesting and challenging problems? Do you want Topcoder goodies? So fasten your seat belts because you should not miss out on this Topcoder contest. Topcoder Contest is an intra-college coding competition. The platform used for the event will be Topcoder. It will be open for all and no registration fee is required; all you need is a topcoder account."
+            android:text="In remembrance of late Vibhor Gandhi (5 th batch student of Animation &amp; Multimedia), a creative contest would be held in TechVibes, where participants will create a Story Board/Comic Strips/ Poster Design/ Digital Painting/ Cartoon Making/ Visual Book/ Matte Painting on themes; 2 nd Sem – Environmental Threats, 4 th Sem – Digital India, 6 th Sem&amp; MAD – SabkaSathSabkaVikas."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
 
         <TextView
-            android:id="@+id/rules"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rules and Regulations"
-            android:textSize="30sp"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:typeface="serif"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:padding="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1. Please refrain from discussing strategy during the contest."
+            android:text="Students must submit their entries before 13 th March, 2018 up to 5:00 PM. The selected entries will be exhibited during TechVibes-18. Participation is mandatory for all students. All entries must have a Name, Roll Number and Semester at the back of the entry."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
         <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:padding="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2. Any case of code plagiarism will result in disqualification of both the users from the contest. We've a fairly good plagiarism detector that works at the opcode level."
+            android:text="Best entries would be awarded during the Prize distribution ceremony on 16 th March, 2018."
             android:textSize="20sp"
             android:textColor="@color/white"
             />
 
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3. You will code directly on Topcoder applet or Web Arena."
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            />
-
-        <TextView
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingBottom="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="4. Languages supported: C++, Python, Java, C#."
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            />
 
         <TextView
             android:id="@+id/textView"
@@ -122,7 +89,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Puru Raj Jain"
+                android:text="Ashish Vijayvargiya"
                 android:layout_weight="5"
                 android:textSize="20sp"
                 android:textColor="@color/white"
@@ -135,7 +102,7 @@
                 android:layout_weight="5"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:text="+91-9414268529"
+                android:text="+91-9024571971"
                 android:id="@+id/con1"
                 android:clickable="true"
                 />
@@ -155,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="Sanjay Singh"
+                android:text="Prerna Mittal"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -166,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:clickable="true"
-                android:text="+91-9929959939"
+                android:text="+91-8890063845"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
