--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,23 +14,7 @@
     >
 
 
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:textAlignment="center"
-        android:id="@+id/techvibestext"
-        android:text="TechVibes18"
-        android:textSize="50dp"
-        android:gravity="center"
-        android:padding="5dp"
-        android:textColor="#FFFFFF"
-
-        />
-
     <GridView
-        android:layout_below="@id/techvibestext"
         android:textFilterEnabled="true"
         android:layout_weight="8.5"
         android:id="@+id/gridView"
@@ -48,4 +31,4 @@
         >
 
     </GridView>
-</RelativeLayout>
+</LinearLayout>
