--- a/app/src/main/res/layout/sub_act_model.xml
+++ b/app/src/main/res/layout/sub_act_model.xml
@@ -8,13 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/subActLinearLayout"
+        android:orientation="vertical"
         >
     <ImageView
         android:id="@+id/subactimage"
         android:background="@color/transparent"
         android:src="@drawable/notification_on"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:padding="5dp"
         android:layout_margin="20dp"
         android:clickable="true"
